--- a/Plachtovac/Client/Components/Plachta/PlachtaDenView.razor
+++ b/Plachtovac/Client/Components/Plachta/PlachtaDenView.razor
@@ -10,7 +10,7 @@
 @inject IJSRuntime JSRuntime
 @inject IModalService Modal
 
-<div class="den">
+<div class="den @(PlachtaView.VeduciToHilight != null && PlachtaView.VeduciToHilight == Den.Veduci ? "veduci-dna" : "")">
     <div class="title">
         <span class="devVTyzdni">@(DniVTyzdni.GetDen((Den.Poradie + PlachtaView.Rozvrh.Zaciatok) % 7))</span>
         <span class="veduciDna"><span>@(Den.Veduci?.Prezyvka ?? "N/A")</span> <Button @onclick="NastavVeducehoDna" class="btn-small btn-clear" style="padding: 0;"><i class="fas fa-edit"></i></Button></span>
