--- a/Plachtovac/Client/wwwroot/css/site.css
+++ b/Plachtovac/Client/wwwroot/css/site.css
@@ -21,6 +21,48 @@ a, .btn-link {
     box-shadow: none;
 }
 
+.btn-clear-white {
+    background: transparent;
+    border: 0px none;
+    min-width: 0;
+    box-shadow: none;
+    opacity: 0.2;
+}
+
+.btn-clear-white:hover {
+    background: white;
+    border: 1px solid #34495e;
+    opacity: 1;
+}
+
+.btn-fileOpen {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+    text-transform: none;
+    font-size: 1rem;
+}
+
+.btn-fileOpen > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+.btn-fileOpen label {
+    display: none;
+}
+
+.btn-fileOpen input {
+    width: 100%;
+    cursor: pointer;
+}
+
 @media all and (display-mode: standalone) {
     .navbar-brand {
         display: none;
@@ -50,6 +92,21 @@ button.dropdown-item {
     cursor: pointer;
     color: rgba(0,0,0,.87);
     text-decoration: none;
+}
+
+button.dropdown-item {
+    cursor: pointer;
+    color: rgba(0,0,0,.87);
+    text-decoration: none;
+}
+
+a.dropdown-item {
+    cursor: pointer;
+    font-size: 0.85rem;
+}
+
+a.dropdown-item:hover {
+    background-image: none;
 }
 
 .dropdown-info {
@@ -152,6 +209,40 @@ button.dropdown-item {
         cursor: pointer;
     }
 
+
+.plachtaOverlayCanvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.plachtaOverlayCanvas.edit-mode {
+    background: #0000ff;
+    background: rgba(0,0,255,0.2);
+    z-index: 10;
+}
+
+.plachtaOverlaySvg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.plachta-view.readonly .plachtaOverlaySvg {
+    z-index: 10;
+}
+
+.plachtaOverlaySvg svg {
+    width: 100%;
+    height: 100%;
+}
+
+.blazor-context-menu {
+    z-index: 5;
+}
+
 ul.sablonyAktivit {
     list-style: none;
     padding: 0;
@@ -176,6 +267,7 @@ ul.sablonyAktivit {
     margin: 1px;
     position: relative;
     flex: 1;
+    z-index: 2;
 }
 
     .den .title {
@@ -215,6 +307,10 @@ ul.sablonyAktivit {
             display: inline-block;
         }
 
+    .den.veduci-dna .aktivity {
+        background: repeating-linear-gradient( -45deg, #222, #222 10px, #333 10px, #333 20px );
+    }
+
 .aktivity {
     width: calc(100% - 52px);
     position: absolute;
@@ -228,6 +324,10 @@ ul.sablonyAktivit {
     position: absolute;
     background-color: darkorchid;
 }
+
+    .aktivita.veduci-aktivity {
+        background: repeating-linear-gradient( -55deg, #1b6ec2, #1b6ec2 10px, #222222 10px, #222222 20px );
+    }
 
 .dropdown-placeholder {
     height: 100%;
